--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@huggingface/inference": "^1.8.0",
     "chalk": "^5.2.0",
     "discord.js": "^14.8.0",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "join-images": "^1.1.5",
+    "sharp": "^0.32.0"
   },
   "type": "module",
   "scripts": {
