--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@huggingface/inference": "^1.8.0",
+    "@huggingface/inference": "^2.7.0",
     "chalk": "^5.2.0",
     "discord.js": "^14.8.0",
     "dotenv": "^16.0.3",
@@ -16,6 +16,6 @@
     "start": "node ."
   },
   "engines": {
-    "node": "18"
+    "node": ">=18"
   }
 }
