--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@huggingface/inference": "^2.7.0",
+    "@huggingface/inference": "^3.3.4",
     "chalk": "^5.2.0",
-    "discord.js": "^14.8.0",
+    "discord.js": "^14.18.0",
     "dotenv": "^16.0.3",
     "join-images": "^1.1.5",
     "sharp": "^0.32.0"
@@ -17,5 +17,6 @@
   },
   "engines": {
     "node": ">=18"
-  }
+  },
+  "packageManager": "yarn@4.5.1+sha512.341db9396b6e289fecc30cd7ab3af65060e05ebff4b3b47547b278b9e67b08f485ecd8c79006b405446262142c7a38154445ef7f17c1d5d1de7d90bf9ce7054d"
 }
